--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
         "@nuxtjs/axios": "^5.13.6",
         "core-js": "^3.15.1",
         "nuxt": "^2.15.7",
-        "v-calendar": "^2.3.2"
+        "v-calendar": "^2.3.2",
+        "vue-content-placeholders": "^0.2.1"
     },
     "devDependencies": {
         "@nuxtjs/tailwindcss": "^4.2.1",
         "autoprefixer": "^10.3.3",
         "postcss": "^8.3.6",
-        "tailwindcss": "^2.2.8"
+        "tailwindcss": "^2.2.8",
+        "vue-lazyload": "^1.3.3",
+        "vue-observe-visibility": "^1.0.0"
     }
 }
