--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "core-js": "^3.15.1",
         "nuxt": "^2.15.7",
         "v-calendar": "^2.3.2",
+        "vue-carousel": "^0.18.0",
         "vue-content-placeholders": "^0.2.1"
     },
     "devDependencies": {
