--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@nuxtjs/axios": "^5.13.6",
+        "@nuxtjs/ngrok": "^2.0.0",
         "core-js": "^3.15.1",
         "nuxt": "^2.15.7",
         "v-calendar": "^2.3.2",
